--- a/CarRentalManagement/appsettings.json
+++ b/CarRentalManagement/appsettings.json
@@ -1,13 +1,13 @@
-{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        //"CarRentalManagementContext": "Server=(localdb)\\mssqllocaldb;Database=CarRentalManagementContext; Trusted_Connection=True;MultipleActiveResultSets=true"
-        "CarRentalManagementContext": "Server=LAPTOP-VLJH0FBM\\SQLEXPRESS;Database=CarRentalManagementContext;Integrated Security=SSPI;TrustServerCertificate=True; Trusted_Connection=True;MultipleActiveResultSets=true"
+﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarRentalManagementContext": "Server=LAPTOP-VLJH0FBM\\SQLEXPRESS;Database=CarRentalManagementContext;Integrated Security=SSPI;TrustServerCertificate=True; Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityContext": "Server=(localdb)\\mssqllocaldb;Database=IdentityContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
